refactor: replace List.of() with Arrays.asList() for mutable lists
Replace immutable List.of() with mutable Arrays.asList() in multiple files to allow modification of list contents where needed. This change affects ModMetaDto, HudHandler, HttpServer, EventHandler and ClientCommandHandler classes.